Fix z-index

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -54,7 +54,7 @@ nav {
     flex-direction: column;
     justify-content: center;
     padding-top: 0.5em;
-    z-index: 100;
+    z-index: 5;
 }
 
 nav #links {
@@ -139,6 +139,7 @@ section p {
     top: 0;
     left: 0;
     transition: top 0.1s;
+    z-index: 10;
 
     display: flex;
     flex-direction: column;
@@ -262,7 +263,7 @@ section p {
 }
 
 .day_table {
-    z-index: 10;
+    z-index: 2;
 }
 
 #harmonogram_days table {
